fix navigation issue as not responsive

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -33,7 +33,7 @@ header {
   z-index: 10;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   color: #fff;
   padding: 35px 100px 0;
@@ -86,8 +86,8 @@ section {
 
 @media only screen and (min-width: 48rem) {
   header {
-    flex-direction: column;
-
+    flex-direction: row;
+    justify-content: space-between;
     h2 {
       margin-bottom: 15px;
     }
